# gtest-gmock-example

./: README.md
gmockSample/: CMakeLists.txt  instr.sh  normal.sh
gmockSample/include/: HelloWorld.h  Messenger.h
gmockSample/test/: MockMessenger.cpp
